[gd_scene load_steps=5 format=3 uid="uid://bsfewblut8xab"]

[ext_resource type="Texture2D" uid="uid://bots6k8ptyyp4" path="res://Inventory_system_v2/Economy_system/sprites/tile_0011.png" id="1_0kltx"]
[ext_resource type="Script" uid="uid://bosojnl8y50b7" path="res://Inventory_system_v2/Economy_system/displayers/scripts/shop_displayer.gd" id="1_s5tx0"]
[ext_resource type="PackedScene" uid="uid://c04aqmj5iqk86" path="res://Inventory_system_v2/Economy_system/displayers/scenes/shop_grid_cell.tscn" id="2_velpi"]
[ext_resource type="PackedScene" uid="uid://d12jbjsrwjiss" path="res://Inventory_system_v2/Economy_system/displayers/scenes/shop_items_slider.tscn" id="5_dn61m"]

[node name="ShopDisplayer" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(600, 236)
offset_left = 276.0
offset_top = 206.0
offset_right = 876.0
offset_bottom = 442.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_s5tx0")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_0kltx")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Shop_grid_continer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = -2

[node name="PanelContainer2" parent="MarginContainer/Shop_grid_continer" instance=ExtResource("2_velpi")]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer3" parent="MarginContainer/Shop_grid_continer" instance=ExtResource("2_velpi")]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer4" parent="MarginContainer/Shop_grid_continer" instance=ExtResource("2_velpi")]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer5" parent="MarginContainer/Shop_grid_continer" instance=ExtResource("2_velpi")]
layout_mode = 2
mouse_filter = 2

[node name="Control2" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
mouse_filter = 2

[node name="ShopItemsSlider" parent="Control2" instance=ExtResource("5_dn61m")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -118.0
offset_bottom = 118.0
grow_vertical = 2

[connection signal="slider_moved" from="Control2/ShopItemsSlider" to="." method="_on_shop_items_slider_slider_moved"]
